# os-aliases

./: CMakeLists.txt  README.md
code/include/golxzn/: aliases.hpp
code/include/golxzn/os/: aliases.hpp
